# allgames

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  versions.tdf
engine/: CMakeLists.txt  test.cpp
engine/src/: engine.h  gr.h  program.cpp  program.h
engine/src/scenes/: node2d.h  node2drelative.h  nodes.h  scene.h
games/endlauncher/: CMakeLists.txt
games/endlauncher/src/: main.cpp  netio.cpp  netio.h
games/forespend/: CMakeLists.txt
games/forespend/src/: main.cpp
games/forespend/src/client/: client.cpp  client.h
games/forespend/src/client/scenes/: configmenu.cpp  configmenu.h  game.h  mainmenu.cpp  mainmenu.h
games/forespend/src/common/: program.h
games/forespend/src/server/: server.cpp  server.h
include/: incmgr.h
include/enginend/scenes/: node2d.h  node2drelative.h  nodes.h
include/tiny/: tdf.h  term.h
