cmake_minimum_required(VERSION 3.20)
project(games)
set(CMAKE_CXX_FLAGS "-std=c++17 -Wno-error")
if(WIN32)
    set(PLATFORM_DIR "windows")
else()
    set(PLATFORM_DIR "linux")
endif()
add_subdirectory(engine)
add_subdirectory(games/forespend)
add_subdirectory(games/endlauncher)
include(ExternalProject)